tests/ui/unsorted-match-unstable.stderr
error: E::Bbb should sort before E::Ddd
  --> tests/ui/unsorted-match-unstable.rs:21:9
   |
15 |     #[sorted]
   |     --------- in this procedural macro expansion
...
21 |         E::Bbb(_, _) => {}
   |         ^^^^^^
   |
   = note: this error originates in the attribute macro `sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
